<resources>
    <string name="app_name">Atipik</string>

    <!--- LOGIN -->
    <string name="hintEmail">Email...</string>
    <string name="hintPassword">Contraseña...</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="loginOk">Usuario correcto</string>
    <string name="loginFail">Email o contraseña incorrectos</string>
    <string name="imageLogIn">Imagen del login</string>


    <!--- REGISTRO -->
    <string name="registroNombreUsuario">Nombre de Usuario...</string>
    <string name="registroPassword">Contraseña...</string>
    <string name="registroEmail">Email...</string>
    <string name="registroBtn">Registrarse</string>
    <string name="faltanCampos">Faltan campos por rellenar</string>
    <string name="cuentaOk">Cuenta creada correctamente</string>


    <!--- BACKOFFICE -->
    <string name="bienvenidoPlusExtra">BEINVENIDO/A</string>
    <string name="backofficeTitle">BackOffice</string>
    <string name="backofficeBtnVerLogs">Ver Logs</string>
    <string name="backofficeTicketId">Ticket ID:</string>
    <string name="backofficeUsuario">Usuario: </string>
    <string name="backofficePizzas">Pizzas: </string>
    <string name="backofficesPrecio">Precio: </string>
    <string name="BtnLogOutDescription">LogOutDescription</string>


    <!--- MENU PIZZAS -->
    <string name="btnAñadir">Añadir</string>
    <string name="textPizza">Pizza: </string>
    <string name="textDescription">Descripción: </string>
    <string name="textPrice">Precio: </string>
    <string name="btnComprar">Pagar </string>
    <string name="toastCompraOk">Compra realizada correctamente</string>
    <string name="btnLogOut">Cerrando sesión</string>


</resources>